// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MetaspaceHeader > should match snapshot (logged in) 1`] = `
"<div class=\\"sm-header h-16\\">
  <div class=\\"fixed top-0 left-0 right-0\\">
    <div class=\\"
              non-responsive-menu
              transition-colors duration-300 ease-in-out h-16
              flex items-center justify-between
              bg-primary\\">
      <div class=\\"header-items\\">
        <div class=\\"flex mt-[4px] mr-[15px]\\">
          <div class=\\"relative\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\">
            <!---->
          </div>
        </div>
        <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
          <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
              <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Upload</span>
              <!----></span>
            </button></div>
        </div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Datasets</span>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Datasets</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Annotations</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Databases</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Projects</div>
          </div>
        </div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Add-ons</span>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Detectability</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">METASPACE converter</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Python client</div>
          </div>
        </div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Support</span>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Contact</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">FAQ</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Feature requests</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Learn</div>
          </div>
        </div>
        <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
          <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
              <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">News</span></span>
            </button></div>
        </div>
      </div>
      <div class=\\"header-items\\">
        <!---->
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Test UserX</span>
                <div data-v-6bf8fbbe=\\"\\" class=\\"mock-el-tooltip\\" content=\\"undefined has a pending membership request.\\" placement=\\"bottom\\"><span data-v-6bf8fbbe=\\"\\" class=\\"notification\\"></span></div>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">My account</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">My groups</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">My projects</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Sign out</div>
          </div>
        </div>
        <div class=\\"w-[15px]\\"></div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0\\" style=\\"--el-button-bg-color: #FFAB3F; --el-button-text-color: var(--el-color-black); --el-button-border-color: #FFAB3F; --el-button-hover-bg-color: rgb(255, 196, 121); --el-button-hover-text-color: var(--el-color-black); --el-button-hover-border-color: rgb(255, 196, 121); --el-button-active-bg-color: rgb(208, 141, 54); --el-button-active-border-color: rgb(208, 141, 54);\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">METASPACE Pro</span>
                <!---->
                <!----></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item hover:!text-amber-500 hover:!bg-amber-500/10\\" style=\\"cursor: pointer;\\">Plans</div>
            <div class=\\"el-dropdown-menu__item hover:!text-amber-500 hover:!bg-amber-500/10\\" style=\\"cursor: pointer;\\">Pro x Academic</div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-start justify-center
              bg-primary flex-wrap h-full\\">
      <div class=\\"header-items flex-row w-full justify-between\\" style=\\"height: 64px;\\">
        <div class=\\"flex pl-3 pr-4\\">
          <div class=\\"relative\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\">
            <!---->
          </div>
        </div><button class=\\" button-reset flex h-12 w-12 mr-3\\"><svg class=\\"h-full w-full sm-menu-icon\\"></svg>
          <!---->
        </button>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;

exports[`MetaspaceHeader > should match snapshot (logged out) 1`] = `
"<div class=\\"sm-header h-16\\">
  <div class=\\"fixed top-0 left-0 right-0\\">
    <div class=\\"
              non-responsive-menu
              transition-colors duration-300 ease-in-out h-16
              flex items-center justify-between
              bg-primary\\">
      <div class=\\"header-items\\">
        <div class=\\"flex mt-[4px] mr-[15px]\\">
          <div class=\\"relative\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\">
            <!---->
          </div>
        </div>
        <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
          <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
              <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Upload</span>
              <!----></span>
            </button></div>
        </div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Datasets</span>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Datasets</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Annotations</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Databases</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Projects</div>
          </div>
        </div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Add-ons</span>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Detectability</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">METASPACE converter</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Python client</div>
          </div>
        </div>
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">Support</span>
                <div class=\\"mock-el-icon ml-1 mt-0.5 transition-transform duration-300\\" style=\\"transform: rotate(0deg);\\"><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 1024 1024\\">
                    <path fill=\\"currentColor\\" d=\\"M831.872 340.864 512 652.672 192.128 340.864a30.592 30.592 0 0 0-42.752 0 29.12 29.12 0 0 0 0 41.6L489.664 714.24a32 32 0 0 0 44.672 0l340.288-331.712a29.12 29.12 0 0 0 0-41.728 30.592 30.592 0 0 0-42.752 0z\\"></path>
                  </svg></div></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Contact</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">FAQ</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Feature requests</div>
            <div class=\\"el-dropdown-menu__item \\" style=\\"cursor: pointer;\\">Learn</div>
          </div>
        </div>
        <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
          <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0 bg-transparent\\">
              <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">News</span></span>
            </button></div>
        </div>
      </div>
      <div class=\\"header-items\\">
        <div class=\\"header-items mr-1 lg:mr-2\\"><button class=\\"button-reset 
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  focus:outline-none
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\">Create account</button><button class=\\"button-reset 
  mx-1 px-3 py-2 rounded-md no-underline
  text-sm font-medium text-white lg:tracking-wide
  focus:outline-none
  transition-colors duration-150 ease-in-out
  border border-solid border-transparent header-link\\">Sign in</button></div>
        <!---->
        <!---->
        <div class=\\"mock-el-dropdown\\" type=\\"primary\\" role=\\"menu\\">
          <div class=\\"h-auto flex flex-row items-center justify-center w-full\\">
            <div class=\\"text-white font-medium cursor-pointer items-center justify-center\\"><button ariadisabled=\\"false\\" type=\\"button\\" class=\\"el-button el-button--primary !text-white font-medium cursor-pointer items-center justify-center  border-0\\" style=\\"--el-button-bg-color: #FFAB3F; --el-button-text-color: var(--el-color-black); --el-button-border-color: #FFAB3F; --el-button-hover-bg-color: rgb(255, 196, 121); --el-button-hover-text-color: var(--el-color-black); --el-button-hover-border-color: rgb(255, 196, 121); --el-button-active-bg-color: rgb(208, 141, 54); --el-button-active-border-color: rgb(208, 141, 54);\\">
                <!--v-if--><span class=\\"\\"><span class=\\"font-bold\\" style=\\"font-size: 15px;\\">METASPACE Pro</span>
                <!---->
                <!----></span>
              </button></div>
          </div>
          <div class=\\"mock-el-dropdown-menu\\">
            <div class=\\"el-dropdown-menu__item hover:!text-amber-500 hover:!bg-amber-500/10\\" style=\\"cursor: pointer;\\">Plans</div>
            <div class=\\"el-dropdown-menu__item hover:!text-amber-500 hover:!bg-amber-500/10\\" style=\\"cursor: pointer;\\">Pro x Academic</div>
          </div>
        </div>
      </div>
    </div>
    <div class=\\"responsive-menu transition-colors duration-300 ease-in-out h-16 flex items-start justify-center
              bg-primary flex-wrap h-full\\">
      <div class=\\"header-items flex-row w-full justify-between\\" style=\\"height: 64px;\\">
        <div class=\\"flex pl-3 pr-4\\">
          <div class=\\"relative\\"><img src=\\"/src/assets/images/logo.png\\" alt=\\"Metaspace\\" title=\\"Metaspace\\">
            <!---->
          </div>
        </div><button class=\\" button-reset flex h-12 w-12 mr-3\\"><svg class=\\"h-full w-full sm-menu-icon\\"></svg>
          <!---->
        </button>
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>"
`;
